# compton

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  MoonObject.cpp  MoonObject.h  README.md  RainObject.cpp  RainObject.h  Shared.h  WorldManager.cpp  WorldManager.h  alife.cpp  engine.cpp  game.cpp  game.h  math.cpp  math.h  object_moon.cpp  object_moon.h  shared.h  sky_manager.cpp  sky_manager.h  todo  world.cpp  world.h
engine/: AudioManager.cpp  AudioManager.hpp  Console.cpp  Console.hpp  Entity.cpp  Entity.hpp  EntityFactory.cpp  Sprite.cpp  Sprite.hpp  engine.cpp  entity.cpp  entity.h  entity_factory.cpp  entity_factory.h  sprite.cpp  sprite.h
engine/new/: parser.c  parser.h
game/: CreatureBrain.cpp  CreatureBrain.h  Entity.cpp  Entity.hpp  EntityFactory.cpp  MoonObject.cpp  MoonObject.h  Rain.cpp  Rain.hpp  Sprite.hpp  WorldManager.cpp  WorldManager.h  adf.h  agent.cpp  agent.h  agent_creature.cpp  agent_physics.cpp  agent_physics.h  agent_sprite.cpp  agent_sprite.h  agent_toy.h  game.cpp  game.h  idx.cpp  scr.cpp  scr.h
game/alife/: brain.cpp  brain.h
game/objects/: Moon.cpp  Moon.h  World.cpp  World.h  names.h  object_creature.cpp  object_creature.h  object_moon.cpp  object_world.cpp  object_world.h
game/objects/creature/: creature.cpp  creature.h  (+1 more)
platform/: CMakeLists.txt  platform.c  platform_console.c  platform_filesystem.c  platform_graphics.cpp  platform_graphics_mesh.c  platform_image.cpp  platform_image_dtx.cpp  platform_image_ftx.cpp  platform_image_ppm.cpp  platform_input.c  platform_library.c  platform_log.c  platform_model.cpp  platform_model_bsp.c  platform_model_iqm.cpp  platform_model_md2.cpp  platform_model_obj.cpp  platform_model_u3d.cpp  platform_window.c
platform/graphics/: platform_graphics.cpp  platform_graphics_font.c
platform/image/: platform_image.c
platform/include/: platform.h  platform_filesystem.h  platform_graphics.h  platform_image.h  platform_library.h  platform_log.h  platform_math.h  platform_model.h  platform_model_obj.h  platform_model_u3d.h  platform_window.h
src/: CMakeLists.txt  app.cpp  app.h  background.cpp  background.h  camera.h  console.cpp  console.h  filesystem.cpp  game_mode.cpp  game_mode.h  image_manager.cpp  image_manager.h  random.cpp  random.h  script.cpp  script.h  script_parser.cpp  script_parser.h  serializer.cpp  serializer.h  shared.h  timer.h
src/GUI/: GUIButton.cpp  GUIButton.h  GUICursor.cpp  GUICursor.h  GUIPanel.cpp  GUIPanel.h  GUIPieMenu.cpp  GUIPieMenu.h  GUIStyleSheet.cpp  GUIStyleSheet.h
src/engine/: App.cpp  BitmapFont.cpp  BitmapFont.h  Camera.h  Compton.h  Console.cpp  Console.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  FileSystem.cpp  FileSystem.h  GUIButton.cpp  GUIConsoleOutput.cpp  GUIConsoleOutput.h  GUICursor.cpp  GUIPanel.cpp  GUIPanel.h  GUIStyleSheet.cpp  GUIStyleSheet.h  GameMode.h  GameModeManager.cpp  GameModeManager.h  ImageBitmap.cpp  ImageBitmap.h  ImageManager.cpp  ImageManager.h  JsonReader.cpp  JsonReader.h  LispInterface.cpp  LispInterface.h  LoaderGfx.cpp  LoaderGfx.h  LoaderPkg.cpp  LoaderPkg.h  PlayerManager.cpp  PlayerManager.h  Random.cpp  Random.h  (+23 more)
src/engine/Editors/: SpriteSheetEditor.cpp  SpriteSheetEditor.h
src/engine/GUI/: GUIButton.cpp  GUIButton.h  GUIConsoleOutput.cpp  GUIConsoleOutput.h  GUICursor.cpp  GUICursor.h  GUIFont.cpp  GUIFont.h  GUIImage.cpp  GUIImage.h  GUILabel.cpp  GUILabel.h  GUIPanel.cpp  GUIPanel.h  GUIPieMenu.cpp  GUIPieMenu.h  GUIStyleSheet.cpp  GUIStyleSheet.h  GUITooltip.cpp  GUITooltip.h
src/engine/Input/: Action.cpp  Action.h  Input.h  InputManager.cpp  InputManager.h
src/engine/Renderer/: BitmapFont.cpp  BitmapFont.h  DrawRoutines.cpp
src/engine/vm/: vm.c  vm.h
src/entity/: entity.cpp  entity.h  entity_manager.cpp  entity_manager.h
src/game/: AgentDefinitionLoader.cpp  Background.cpp  Background.h  BaseCharacter.cpp  CMakeLists.txt  ConfigLoader.cpp  ConfigLoader.h  DSGameMode.cpp  DSGameMode.h  Game.h  GameMode.cpp  GameMode.h  Inventory.cpp  Inventory.h  PhysicsAgent.h  PlayerManager.cpp  PlayerManager.h  SpriteAgent.cpp  SpriteSheet.cpp  SpriteSheet.h  StateStorage.cpp  StateStorage.h  Terrain.cpp  Terrain.h  Utility.cpp  Utility.h  World.cpp  World.h  adf.cpp  agent.cpp  agent.h  agent_creature.cpp  agent_physics.cpp  agent_physics.h  agent_sprite.cpp  agent_sprite.h  agent_toy.cpp  game.cpp  game.h  idx.h  (+1 more)
src/game/ALife/: Brain.cpp  Brain.h  Foundation.h  Sensor.cpp  Sensor.h
src/game/DS/: House.h  HumanCreature.cpp  Pawn.cpp  StoreHouse.cpp  Tree.cpp  Tree.h
src/game/Entities/: AIBrain.cpp  AIBrain.h  BaseAnimated.cpp  BaseAnimated.h  BaseBuilding.cpp  BaseBuilding.h  BaseCharacter.cpp  BaseCharacter.h  BaseCreature.cpp  BaseCreature.h  BaseItem.cpp  BaseItem.h  BaseSprite.cpp  BaseSprite.h  BaseWeapon.cpp  BaseWeapon.h  Boid.cpp  Boid.h  BoidManager.cpp  BoidManager.h  DebugWaypoint.cpp  House.cpp  House.h  StoreHouse.cpp  Tree.cpp  Tree.h
src/game/Entities/ai/: Brain.cpp  Brain.h  Foundation.h  Sensor.cpp  Sensor.h  foundation.h
src/game/agents/: PhysicsAgent.cpp  SpriteAgent.cpp  SpriteAgent.h
src/game/alife/: brain.h
src/game/objects/: object_creature.cpp  object_creature.h  object_moon.cpp  object_moon.h  object_world.cpp  object_world.h
src/game/vc_old/: AgentDefinitionLoader.cpp  AgentDefinitionLoader.h  agent.cpp  agent.h  agent_creature.cpp  brain.cpp  brain.h  game.cpp  game.h  object_creature.cpp  object_creature.h  object_world.cpp  object_world.h
src/game/vc_old/agents/: Cloud.cpp  PhysicsAgent.cpp  PhysicsAgent.h  SpriteAgent.cpp  SpriteAgent.h
src/hscript/: vm.c  vm.h
src/input/: input.h  input_action.cpp  input_manager.cpp
src/lisp/: CMakeLists.txt
src/lisp/private/: lisp.cpp  lisp_gc.cpp  lisp_gc.h  lisp_opt.cpp  stack.h  symbols.h
src/lisp/public/: lisp.h  lisp_opt.h
src/render/: render.cpp  render.h  render_bitmap_font.cpp  render_bitmap_font.h  render_sprite_sheet.cpp  render_sprite_sheet.h
src/tools/pkgman/: CMakeLists.txt  main.c  main.h  pack_image.c
src/vc_old/: object_creature.h
src/vc_old/agents/: SpriteAgent.h
(+5 files in other folders)
